@@ -1,5 +1,10 @@
 2012-10-25  H.J. Lu  <hjl.tools@gmail.com>
 
+	* binutils-lto-mixed-18.patch: Check symbol for linker created
+	section instead.
+
+2012-10-25  H.J. Lu  <hjl.tools@gmail.com>
+
 	* binutils-lto-mixed-18.patch: Never mark linker generated dynamic
 	symbols undefined.
 
